--- a/templates/base.html
+++ b/templates/base.html
@@ -115,8 +115,9 @@
             <div class="dropdown">
                 <a href="#contact" class="dropbtn">Tools</a>
                 <div class="dropdown-content">
-                    <a href="#services">Database</a>
-                    
+                    <a href="#services">Alignment</a>
+                    <a href="#services">Genome Annotation</a>
+                    <a href="#services">Mutation Mapping</a>
                 </div>
             </div>
             <a href="#services">Database</a>
