db home and query

--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
                     <a href="#services">Mutation Mapping</a>
                 </div>
             </div>
-            <a href="#services">Database</a>
+            <a href="{%url 'my_app:db_home'%}">Database</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
         </div>
