added genome id in rendered results tables
it was not included. the view sent in the context but the html was not using it

--- a/my_app/templates/my_app/view_db_query.html
+++ b/my_app/templates/my_app/view_db_query.html
@@ -42,6 +42,7 @@ th {
 		<tbody>
 			{% for item in context %}
 			<tr>
+                <td>{{item.genome_id}}</td>
 				<td>{{item.host}}</td>
 				<td>{{item.country}}</td>
 				<td>{{item.region}}</td>
