--- a/templates/base.html
+++ b/templates/base.html
@@ -115,7 +115,7 @@
             <div class="dropdown">
                 <a href="#contact" class="dropbtn">Tools</a>
                 <div class="dropdown-content">
-                    <a href="#services">Alignment</a>
+                    <a href="{%url 'my_app:annotation'%}">Annotation</a>
                     <a href="#services">Genome Annotation</a>
                     <a href="#services">Mutation Mapping</a>
                 </div>
